hard-gists/1098968/run.log
=== Docker Run Log for 1098968 ===
Started at: Mi 29. Okt 11:50:51 CET 2025

[2025-10-29 11:50:52] START: Running container for 1098968
[2025-10-29 11:50:52] SUCCESS: Container 1c2548082f493c41984c0298f8a5481299e8e4b64c9a2400b15f550334a1497f started for 1098968
=== Container logs for 1098968 ===
  File "/snippet.py", line 16
    return reduce(lambda x, (y, z): x | (z << y),
                            ^^^^^^
SyntaxError: Lambda expression parameters cannot be parenthesized
=== End of logs for 1098968 ===
[2025-10-29 11:50:54] INFO: Container 1c2548082f493c41984c0298f8a5481299e8e4b64c9a2400b15f550334a1497f has stopped
